--- a/src/FrontBundle/Resources/config/services.yml
+++ b/src/FrontBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     twig.extension.youtube:
-        class: AppBundle\Twig\YoutubeExtension
+        class: FrontBundle\Twig\YoutubeExtension
         public: false
         tags:
             - { name: twig.extension }
