--- a/src/ImportBundle/Resources/config/services.yml
+++ b/src/ImportBundle/Resources/config/services.yml
@@ -3,10 +3,10 @@ services:
         class:  ImportBundle\Service\YoutubeCollector
         arguments:
             - %import.api_key%
-            - %import.playlist%
     importer:
         class:  ImportBundle\Service\Importer
         arguments:
             - @youtube_collector
             - @doctrine.orm.entity_manager
             - @validator
+            - %import.playlists%
