--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-minify-css": "^0.4.6",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3",
     "gulp-util": "^3.0.4"
   },
   "dependencies": {}
