--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 front:
     resource: @FrontBundle/Controller/
     type:     annotation
+
+import:
+    resource: @ImportBundle/Controller/
+    type:     annotation
